updated : theme-text-color

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .dark-mode {
-  --text-color: #fff;
+  --text-color: #bbc4cc;
   --secondary-color: #1b1f2d;
   --theme-color: #000000;
   --title-color: #ffffff;
